[gd_scene load_steps=13 format=2]

[ext_resource path="res://Graphics/lightning_02_sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/LightningDoor.gd" type="Script" id=2]
[ext_resource path="res://Graphics/lightning_door_contacts.png" type="Texture" id=3]
[ext_resource path="res://Graphics/lightning_02_alt_sheet.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 96 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 96 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 96 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 96 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
height = 68.0556

[node name="LightningDoor" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1.2, 1.2, 1.2, 1 )
scale = Vector2( 0.75, 0.9 )
frames = SubResource( 7 )
frame = 4
playing = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 8 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="FireTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_LightningDoor_body_entered"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
